--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="src/assets/images/Favicon.png" type="image/x-icon">
-
-    <title>Weather</title>
+    <title>Weather Application</title>
   </head>
   <body>
     <div id="root"></div>
